--- a/app/src/main/res/layout/collection_layout.xml
+++ b/app/src/main/res/layout/collection_layout.xml
@@ -1,24 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/collectionLayout"
+    android:layout_width="180dp"
+    android:layout_height="180dp">
+
 
     <ImageView
         android:id="@+id/collectionImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="146dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        app:srcCompat="@drawable/phaceholder" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
-        android:id="@+id/collectionDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/collectionName"
+        android:layout_width="0dp"
+        android:layout_height="25dp"
         android:layout_alignEnd="@+id/collectionImage"
+        android:layout_alignStart="@+id/collectionImage"
         android:layout_below="@+id/collectionImage"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:gravity="center"
-        android:text="TextView" />
-</RelativeLayout>
+        android:text=""
+        app:layout_constraintEnd_toEndOf="@+id/collectionImage"
+        app:layout_constraintStart_toStartOf="@+id/collectionImage"
+        app:layout_constraintTop_toBottomOf="@+id/collectionImage" />
+</android.support.constraint.ConstraintLayout>
