--- a/app/src/main/res/layout/content_flashcards.xml
+++ b/app/src/main/res/layout/content_flashcards.xml
@@ -10,13 +10,18 @@
 
     <GridView
         android:id="@+id/flashcardsPool"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:columnWidth="80dp"
-        android:verticalSpacing="10dp"
+        android:layout_width="0dp"
+        android:layout_height="511dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginStart="5dp"
+        android:columnWidth="160dp"
+        android:gravity="start|top"
         android:horizontalSpacing="10dp"
         android:numColumns="auto_fit"
         android:stretchMode="columnWidth"
-        android:gravity="start|top"
-        />
+        android:verticalSpacing="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
