--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,7 +11,7 @@
     <GridView
         android:id="@+id/collectionsPool"
         android:layout_width="0dp"
-        android:layout_height="511dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
         android:layout_marginStart="5dp"
         android:columnWidth="160dp"
